// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Works on testcase 0 - String limit 5 1`] = `
Array [
  "12345[...TRUNCATED]",
  "12345",
  "1234",
]
`;

exports[`Works on testcase 1 - String limit 5 1`] = `
Object {
  "a": "12345[...TRUNCATED]",
  "b": "12345",
  "c": Array [
    "12345[...TRUNCATED]",
    Object {
      "a": "12345[...TRUNCATED]",
    },
  ],
}
`;

exports[`Works on testcase 2 - String limit 10 1`] = `undefined`;

exports[`Works on testcase 3 - String limit 10 1`] = `null`;

exports[`Works on testcase 4 - String limit 10 1`] = `
Object {
  "a": undefined,
  "b": null,
}
`;

exports[`Works on testcase 5 - String limit 5 1`] = `
Object {
  "a": Array [
    Object {
      "aa": "12345[...TRUNCATED]",
    },
    Object {
      "ab": "1234",
    },
    Object {
      "ac": "12345",
    },
  ],
  "b": Object {
    "ba": undefined,
    "bb": null,
    "bc": "12345[...TRUNCATED]",
    "bd": Object {
      "bca": "12345[...TRUNCATED]",
      "bcb": "12345[...TRUNCATED]",
    },
  },
}
`;

exports[`Works on testcase 6 - String limit 5 1`] = `
Object {
  "a": Array [
    true,
    false,
    undefined,
    null,
  ],
}
`;

exports[`Works on testcase 7 - String limit 5 1`] = `
Object {
  "namedFn": "[function: fn]",
}
`;

exports[`Works on testcase 8 - String limit 5 1`] = `
Object {
  "arrowFunctionNamed": "[function: arrowFunctionNamed]",
}
`;

exports[`Works on testcase 9 - String limit 5 1`] = `
Array [
  "[function: anonymous]",
]
`;

exports[`Works on testcase 10 - String limit 5 1`] = `
Object {
  "a": Symbol(symbol description),
  "b": Symbol(symbol description 2),
}
`;

exports[`Works on testcase 11 - String limit 5 1`] = `
Object {
  "b": "a str[...TRUNCATED]",
  "buf": Object {
    "byteLength": 14,
    "type": "buffer",
  },
}
`;
